# milds

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  index.py  install.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_installation.py
.github/: copilot-instructions.md
docs/: analysis.md  api.md  configuration.md  examples.md  getting-started.md  installation.md  monitoring.md  troubleshooting.md
milds/: __init__.py  __main__.py  app.py  config.py  events.py  host.py  logger.py  net.py
mlids/: __init__.py
rules/: default_rules.yaml
tests/: README.md  __init__.py  conftest.py  test_app.py  test_config.py  test_events.py  test_host.py  test_integration.py  test_logger.py  test_net.py
